cncProd/force-app/main/default/objects/Event_Registration__c/fields/Attendance_check__c.field-meta.xml
<CustomField>
    <fullName>Attendance_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance check</label>
    <type>Checkbox</type>
</CustomField>