cncProd/force-app/main/default/objects/Event_Registration__c/fields/BranchCode__c.field-meta.xml
<CustomField>
    <fullName>BranchCode__c</fullName>
    <description>Branch Code of the Event (Campaign)</description>
    <formula>TEXT(PromoID__r.Branch_Code__c)</formula>
    <label>Branch Code</label>
    <type>Text</type>
</CustomField>