cncProd/force-app/main/default/objects/Event_Registration__c/fields/Dynamic_Field_Label_5__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Field_Label_5__c</fullName>
    <label>Dynamic Field Label 5</label>
    <length>254</length>
    <type>Text</type>
</CustomField>