cncProd/force-app/main/default/objects/Event_Registration__c/fields/Dynamic_Field_Value_2__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_Field_Value_2__c</fullName>
    <label>Dynamic Field Value 2</label>
    <length>254</length>
    <type>Text</type>
</CustomField>