cncProd/force-app/main/default/objects/Event_Registration__c/fields/Event_Reminder_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Reminder_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Reminder Status</label>
    <type>Checkbox</type>
</CustomField>