cncProd/force-app/main/default/objects/Event_Registration__c/fields/Formula_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Formula_CreatedDate__c</fullName>
    <description>This is used for reporting purposes</description>
    <formula>CreatedDate</formula>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>