cncProd/force-app/main/default/objects/Event_Registration__c/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <label>ImageURL</label>
    <length>254</length>
    <type>Text</type>
</CustomField>