cncProd/force-app/main/default/objects/Event_Registration__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <label>Location Name</label>
    <length>254</length>
    <type>Text</type>
</CustomField>