cncProd/force-app/main/default/objects/Event_Registration__c/fields/Preffered_Date__c.field-meta.xml
<CustomField>
    <fullName>Preffered_Date__c</fullName>
    <label>Preferred Date</label>
    <type>Date</type>
</CustomField>