cncProd/force-app/main/default/objects/Event_Registration__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>50</length>
    <type>Text</type>
</CustomField>