cncProd/force-app/main/default/objects/Event_Registration__c/fields/TCAccepted__c.field-meta.xml
<CustomField>
    <fullName>TCAccepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Paid Event: Flag to tell if customer agreed to the Terms and Conditions stipulated in the event site.</description>
    <inlineHelpText>Paid Event: Flag to tell if customer agreed to the Terms and Conditions stipulated in the event site.</inlineHelpText>
    <label>T&amp;C Accepted</label>
    <type>Checkbox</type>
</CustomField>