cncProd/force-app/main/default/objects/Event_Registration__c/fields/TemplateName__c.field-meta.xml
<CustomField>
    <fullName>TemplateName__c</fullName>
    <label>TemplateName</label>
    <length>254</length>
    <type>Text</type>
</CustomField>