cncProd/force-app/main/default/objects/Event_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PromoID__c</columns>
    <columns>Email__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Account__c</columns>
    <columns>ContactId__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>