cncProd/force-app/main/default/objects/Event_Registration__c/listViews/All_MIT.listView-meta.xml
<ListView>
    <fullName>All_MIT</fullName>
    <columns>NAME</columns>
    <columns>Showroom__c</columns>
    <columns>PromoID__c</columns>
    <columns>Email__c</columns>
    <columns>Event_Date__c</columns>
    <columns>Event_Status__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>ContactId__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BranchCode__c</field>
        <operation>equals</operation>
        <value>CCA</value>
    </filters>
    <filters>
        <field>PromoID__c</field>
        <operation>contains</operation>
        <value>Mitsubishi Crystal</value>
    </filters>
    <label>All MIT</label>
    <sharedTo>
        <roleAndSubordinatesInternal>MITPC_Sales_Manager</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>