cncProd/force-app/main/default/objects/Event_Registration__c/listViews/Registration_for_an_Event.listView-meta.xml
<ListView>
    <fullName>Registration_for_an_Event</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>PromoID__c</columns>
    <columns>ContactId__c</columns>
    <columns>LeadId__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Dynamic_Field_Value_1__c</columns>
    <columns>Dynamic_Field_Value_2__c</columns>
    <columns>Dynamic_Field_Value_3__c</columns>
    <columns>Dynamic_Field_Value_4__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PromoID__c</field>
        <operation>equals</operation>
        <value>Cycle &amp; Carriage Virtual Spree (Kia)</value>
    </filters>
    <label>Registration for an Event</label>
</ListView>