cncProd/force-app/main/default/objects/Event_Registration__c/listViews/stinger_after_dark_party.listView-meta.xml
<ListView>
    <fullName>stinger_after_dark_party</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>PromoID__c</columns>
    <columns>ContactId__c</columns>
    <columns>LeadId__c</columns>
    <columns>MobilePhone__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Dynamic_Field_Value_1__c</columns>
    <columns>Dynamic_Field_Value_2__c</columns>
    <columns>Dynamic_Field_Value_3__c</columns>
    <columns>Dynamic_Field_Value_4__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PromoID__c</field>
        <operation>equals</operation>
        <value>Stinger After Dark Party</value>
    </filters>
    <label>Stinger After Dark Party</label>
</ListView>